Fixed: uedit-file-uploader z-index

--- a/app/styles/components/uedit-file-uploader.less
+++ b/app/styles/components/uedit-file-uploader.less
@@ -1,4 +1,6 @@
 .oss-modal-dialog-backdrop.uedit-file-uploader {
+  z-index: 1050;
+
   .drop-zone {
     border-radius: @default-radius;
     border: 2px dashed @upf-primary-rock-blue-light;
